<resources>
    <string name="app_name">Great Contacts</string>
    <string name="menu_item_add">Add</string>
    <string name="menu_item_usecase1mainthreadblocking">UseCase 1. MainThreadBlocking</string>
    <string name="menu_item_usecase2kotlinthreadbackground">UseCase 2. KotlinThreadBackground</string>
    <string name="menu_item_usecase3handler">UseCase 3. Handler</string>
    <string name="menu_item_usecase4asynctask">UseCase 4. AsyncTask</string>
    <string name="menu_item_usecase5rxjava">UseCase 5. RxJava</string>
    <string name="menu_item_usecase6threadpoolexecutor">UseCase 6. ThreadPoolExecutor</string>
    <string name="menu_item_usecase7executor">UseCase 7. Executor</string>
    <string name="menu_item_usecase8loader">UseCase 8. Loader</string>
    <string name="menu_item_usecase9coroutines">UseCase 9. Coroutines</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_edit">Edit</string>
    <string name="text_view_firstname">Firstname</string>
    <string name="text_view_lastname">Lastname</string>
    <string name="text_view_phone">Phone</string>
    <string name="text_view_email">Email</string>
    <string name="default_text_firstname_lastname">Firstname Lastname</string>
    <string name="default_text_phone">(000) 000-00-00</string>
    <string name="default_text_email">email@domain.com</string>
    <string name="default_text_firstname">Firstname</string>
    <string name="default_text_lastname">Lastname</string>
    <string name="menu_item_show_oss_licenses">Show OSS Licenses</string>
    <string name="title_new_contact">New Contact</string>
</resources>
